Initial commit for web deploy setup

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "allinnovaassistclean",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "homepage": "https://allinnovaassist.github.io/allinnovaassistclean",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build:web": "npx expo export -p web",
+    "deploy:web": "npm run build:web && gh-pages -d dist"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -40,9 +43,10 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-expo": "~10.0.0",
+    "gh-pages": "^6.3.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
