--- a/app.json
+++ b/app.json
@@ -17,6 +17,8 @@
       }
     },
     "web": {
+      "bundler": "metro",
+      "output": "static",
       "favicon": "./assets/images/logo-circular-remove.png"
     },
     "extra": {
