--- a/app.json
+++ b/app.json
@@ -19,7 +19,10 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/logo-circular-remove.png"
+      "favicon": "./assets/images/logo-circular-remove.png",
+      "router": {
+        "baseUrl": "/allinnovaassistclean"
+      }
     },
     "extra": {
       "eas": {
